--- a/deploy/complete/docker-compose/docker-compose.yml
+++ b/deploy/complete/docker-compose/docker-compose.yml
@@ -132,7 +132,7 @@ services:
 
   # OCI Orders service
   orders:
-    image: mushop-orders:snapshot
+    image: iad.ocir.io/oracle/ateam/mushop-orders:2.2.0
     ports:
       - 8085:80
     hostname: orders
@@ -152,7 +152,7 @@ services:
       - OADB_USER
       - OADB_PW
       - OADB_SERVICE=mock
-      - JAVA_OPTS=-Xms32m -Xmx128m -XX:MaxRAM=128m -Dlogging.level.mushop.orders=WARN -Djava.security.egd=file:/dev/urandom -Doracle.jdbc.fanEnabled=false -XX:+UnlockExperimentalVMOptions -XX:+UseZGC 
+      - JAVA_OPTS=-Xms32m -Xmx128m -XX:MaxRAM=128m -Dlogging.level.mushop.orders=INFO -Djava.security.egd=file:/dev/urandom -Doracle.jdbc.fanEnabled=false -XX:+UnlockExperimentalVMOptions -XX:+UseZGC 
 
   payment:
     image: iad.ocir.io/oracle/ateam/mushop-payment:0.0.1
