Update with SODA on Maven
Signed-off-by: Gerald Venzl <gerald.venzl@oracle.com>

--- a/src/carts/pom.xml
+++ b/src/carts/pom.xml
@@ -80,7 +80,7 @@
         </dependency>
         <dependency>
             <groupId>com.oracle.database.soda</groupId>
-            <artifactId>soda</artifactId>
+            <artifactId>orajsoda</artifactId>
             <version>${soda.version}</version>
         </dependency>
 
