Updating the `values-mock.yaml` for deploying in mock mode.

--- a/deploy/complete/helm-chart/mushop/values-mock.yaml
+++ b/deploy/complete/helm-chart/mushop/values-mock.yaml
@@ -2,18 +2,18 @@ global:
   mock:
     service: "all"
 
-# Catalogue service runs in mock mode for product images
-catalogue:
-  enabled: true
-
-carts:
-  enabled: false
-
-orders:
-  enabled: false
+tags:
+  streaming: false
+  atp: false
 
 payment:
   enabled: false
 
-user:
+assets:
+  enabled: true
+
+nats:
+  enabled: false
+
+fulfillment:
   enabled: false
