--- a/deploy/basic/terraform/schema.yaml
+++ b/deploy/basic/terraform/schema.yaml
@@ -19,11 +19,12 @@ groupings:
 
   - title: "General Configuration"
     variables:
-    - autonomous_database_name
     - num_nodes
 
   - title: "Optional Configuration"
     variables:
+    - autonomous_database_name
+    - show_advanced
     - generate_public_ssh_key
     - public_ssh_key
 
@@ -82,11 +83,20 @@ variables:
     maxLength: 10
     pattern: "^[a-zA-Z][a-zA-Z0-9]+$"
 
+  show_advanced:
+    type: boolean
+    title: "Show advanced options?"
+    description: "Shows advanced options, allowing enable customer managed encryption, select your own ssh key, and other advanced options. NOTE: Only encryption and ssh key changes are available as Always Free resources, other advanced options may not be available on the Always Free."
+    default: false    
+
   generate_public_ssh_key:
     type: boolean
     title: "Auto generate public ssh key?"
     description: "Auto generate a public key and assign to the compute instances. Uncheck to provide your own public key or leave blank to not use any attach any key to the compute instance"
     required: true
+    visible:
+      and:
+        - show_advanced
 
   public_ssh_key:
     type: oci:core:ssh:publickey
@@ -97,13 +107,19 @@ variables:
       allowMultiple: true
     pattern: "((^(ssh-rsa AAAAB3NzaC1yc2|ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNT|ecdsa-sha2-nistp384 AAAAE2VjZHNhLXNoYTItbmlzdHAzODQAAAAIbmlzdHAzOD|ecdsa-sha2-nistp521 AAAAE2VjZHNhLXNoYTItbmlzdHA1MjEAAAAIbmlzdHA1Mj|ssh-ed25519 AAAAC3NzaC1lZDI1NTE5|ssh-dss AAAAB3NzaC1kc3)[0-9A-Za-z+\/]+[=]{0,3})( [^,]*)?)(,((ssh-rsa AAAAB3NzaC1yc2|ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNT|ecdsa-sha2-nistp384 AAAAE2VjZHNhLXNoYTItbmlzdHAzODQAAAAIbmlzdHAzOD|ecdsa-sha2-nistp521 AAAAE2VjZHNhLXNoYTItbmlzdHA1MjEAAAAIbmlzdHA1Mj|ssh-ed25519 AAAAC3NzaC1lZDI1NTE5|ssh-dss AAAAB3NzaC1kc3)[0-9A-Za-z+\/]+[=]{0,3})( [^,]*)?)*$"
     visible:
-      not:
-        - generate_public_ssh_key
+      and:
+        - and:
+          - show_advanced
+        - not:
+          - generate_public_ssh_key
 
   use_encryption_from_oci_vault:
     type: boolean
     title: "Encrypt boot volume and object storage bucket with a key that you manage?"
     description: "By default, Oracle manages the keys that encrypt the boot volume and object storage bucket, but you can choose a key from a vault that you have access to if you want greater control over the key's lifecycle and how it's used."
+    visible:
+      and:
+        - show_advanced
 
   create_new_encryption_key:
     type: boolean
@@ -112,6 +128,7 @@ variables:
     default: true
     visible:
       and:
+        - show_advanced
         - use_encryption_from_oci_vault
 
   encryption_key_id:
@@ -119,8 +136,12 @@ variables:
     title: "Existent master encryption key"
     description: "Use an existent master encryption key to encrypt boot volume and object storage bucket"
     visible:
-      not:
-        - create_new_encryption_key
+      and:
+        - and:
+          - show_advanced
+          - use_encryption_from_oci_vault
+        - not:
+          - create_new_encryption_key
 
   create_vault_policies:
     type: boolean
@@ -128,6 +149,7 @@ variables:
     description: "Creates policies to manage vault and keys. If you are on the Administrators group or already have the policies for a compartment, this policy is not needed. If you do not have access to allow the policy, ask your administrator to include for you."
     visible:
       and:
+        - show_advanced
         - use_encryption_from_oci_vault
         - create_new_encryption_key
 
@@ -137,6 +159,9 @@ variables:
     description: "Identity Group to allow manage vault and keys."
     visible:
       and:
+        - show_advanced
+        - use_encryption_from_oci_vault
+        - create_new_encryption_key
         - create_vault_policies
 
 outputGroups:
