include VERSION for catalogue service

--- a/deploy/basic/Dockerfile
+++ b/deploy/basic/Dockerfile
@@ -157,13 +157,13 @@ WORKDIR /
 COPY --from=storefront-builder /app/storefront/build /app/storefront
 COPY --from=api-builder /app/api /app/api
 COPY --from=catalogue-builder /catalogue /app/catalogue/catalogue
+COPY src/catalogue/VERSION /app/catalogue/
 
 # Create zip package of the Apps and local images
 RUN mkdir /package && GZIP=-9 tar cvzf /package/mushop-basic.tar.gz /app
 
 # Create ORM package
 COPY deploy/basic/VERSION /
-COPY deploy/basic/VERSION /basic
 COPY deploy/basic/terraform /basic
 COPY src/catalogue/dbdata/atp_mushop_catalogue.sql /basic/scripts
 COPY deploy/basic/httpd.conf /basic/scripts
