--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,4 @@
+# Generic
 .DS_Store
 .env
 *.tgz
@@ -6,3 +7,17 @@
 **/coverage
 **/node_modules
 **/Makefile
+
+# Terraform
+## Local .terraform directories
+**/.terraform/*
+
+## .tfstate files
+*.tfstate
+*.tfstate.*
+
+## Ignore any .tfvars files that are generated automatically for each Terraform run. Most
+## .tfvars files are managed as part of configuration and so should be included in
+## version control.
+##
+*.tfvars
