--- a/deploy/basic/terraform/schema.yaml
+++ b/deploy/basic/terraform/schema.yaml
@@ -47,6 +47,8 @@ groupings:
   - title: "Advanced Resource Options - Compute"
     variables:
     - instance_shape
+    - image_operating_system
+    - image_operating_system_version
 
   - title: "Advanced Resource Options - ATP"
     variables:
@@ -65,8 +67,6 @@ groupings:
       - autonomous_database_license_model
       - autonomous_database_cpu_core_count
       - autonomous_database_data_storage_size_in_tbs
-      - image_operating_system
-      - image_operating_system_version
       - is_pv_encryption_in_transit_enabled
       - vault_display_name
       - vault_type
@@ -147,6 +147,14 @@ variables:
     title: "Object Storage Media PAR expiration date"
     description: "The name for the Autonomous Database instance."
 
+  is_pv_encryption_in_transit_enabled:
+    type: boolean
+    title: "Use in-transit encryption?"
+    description: "Encrypts data in transit between the instance and the boot volume. In-transit encryption for boot and block volumes is only available for virtual machine (VM) instances launched from Oracle-provided images, it is not supported on bare metal instances."
+    visible:
+      and:
+        - show_advanced
+
   use_encryption_from_oci_vault:
     type: boolean
     title: "Encrypt boot volume and object storage bucket with a key that you manage?"
@@ -201,10 +209,9 @@ variables:
     type: boolean
     title: "Use only always free eligible resources?"
     description: "*** Unchecking this may use options that are not included or supported by Always Free eligible resources."
-    visible: show_advanced
-    # visible:
-    #   and:
-    #     - show_advanced
+    visible:
+      and:
+        - show_advanced
 
   lb_shape:
     type: enum
@@ -240,6 +247,30 @@ variables:
     description: "A shape is a template that determines the number of CPUs, amount of memory, and other resources allocated to a newly created instance."
     dependsOn:
       compartmentId: compartment_ocid
+    visible:
+      and:
+        - and:
+          - show_advanced
+        - not:
+          - use_only_always_free_elegible_resources
+
+  image_operating_system:
+    type: string
+    title: "Compute Image OS"
+    description: "The OS/image installed on all compute instances."
+    required: true
+    visible:
+      and:
+        - and:
+          - show_advanced
+        - not:
+          - use_only_always_free_elegible_resources
+
+  image_operating_system_version:
+    type: string
+    title: "Compute Image OS Version"
+    description: "The OS/image version installed on all compute instances."
+    required: true
     visible:
       and:
         - and:
